Påbörjat programmering av spelet
Har lagt in en textbox för gissningar, en knapp för att skicka gissning
samt valideringskontroller för textbox'en. Har också skapat klassen
SecretNumber för affärslogiklagret. Klassen kanske behöver modifieras
något men fungerar hyffsat i nuläget. Har också skapat en egenskap som
kapslar in en Session-variabel som håller igång en instans av spelet
från affärslogiklagret. Återstår att i formuläret skapa de kontroller
som ger spelaren återkoppling på varje gissning och om spelaren klarat
spelet eller inte. Givetvis behöver motsvarande kodas även i code behind
filen. En hel del återstår att göras i stilmallen.

--- a/GuessSecretNumber/GuessSecretNumber/GuessSecretNumber.csproj
+++ b/GuessSecretNumber/GuessSecretNumber/GuessSecretNumber.csproj
@@ -64,6 +64,7 @@
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
     <Content Include="packages.config" />
+    <Content Include="ClassDiagram1.cd" />
     <None Include="Scripts\jquery-2.1.0.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.0.js" />
     <Content Include="Scripts\jquery-2.1.0.min.js" />
@@ -80,6 +81,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Model\GuessedNumber.cs" />
+    <Compile Include="Model\Outcome.cs" />
     <Compile Include="Model\SecretNumber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
